ufsutils (7.3-1) UNSTABLE; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_7_3_0_RELEASE)

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 12 Apr 2010 10:21:23 +0200

ufsutils (7.2-3) unstable; urgency=low

  * Drop patches/04_sysctlnametomib.patch and replace it by a build-depends
    on libc0.1-dev (>= 2.10.1).
  * Add a README.source file.
  * Bump Standard-Versions to 3.8.3.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 24 Oct 2009 18:27:16 +0200

ufsutils (7.2-2) unstable; urgency=low

  * Remove the warning in the package's description about the fact it is an
    experimental package.
  * Remove the libufs2 library and link statically instead. It is small, not
    really usable, and anyway comes without -dev package.
  * Add patches/04_sysctlnametomib.patch to avoid linking with libfreebsd.
  * Bump Standard-Versions to 3.8.2 (no changes).
  * Add a ufsutils-udeb.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jul 2009 15:28:23 +0200

ufsutils (7.2-1) unstable; urgency=low

  [ Guillem Jover ] 
  * Use $(filter ...) instead of $(findstring ...) to extract space separated
    options from DEB_BUILD_OPTIONS in debian/rules.
  * Remove commented out lines in debian/rules.
  * Do not set unused INSTALL_PROGRAM.
  * Line wrap Build-Depends fields for lines longer than 80 chars.
  * Use asterisks for bulleted lists in package description.
  * Remove DPATCHLEVEL variable from patches.
  * Switch to debhelper compatibility level 7.
  * Use dh_prep instead of "dh_clean -k".
  * Do not use stamp files for build.
  * Include quilt.make snippet instead of using ad-hoc code.
  * Remove unused ufsutils variable and rename libufs to lib in debian/rules.

  [ Petr Salinger ]
  * New upstream version (RELENG_7_2_0_RELEASE)
  * Allow mkfs.ufs not only on character devices (GNU/kFreeBSD), but also
    on block devices (Linux) and plain files (i.e. loopback). (Closes: #526586)

  [ Aurelien Jarno ]
  * Bump Standard-Versions to 3.8.1 (no changes).
