@@ -2,6 +2,8 @@ ufsutils (7.3-1) UNSTABLE; urgency=low
 
   [ Petr Salinger ]
   * New upstream version (RELENG_7_3_0_RELEASE)
+  * Use intmax_t cast in fsbtodb() to fix aborts when 
+    making a filesystem larger than 2048 MiB. Closes: #559647.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 12 Apr 2010 10:21:23 +0200
 
